# src/alembic/versions/9d0907d06b20_add_product_groupup_model.py
@@ -1,0 +1,39 @@
+"""Add product groupup model
+
+Revision ID: 9d0907d06b20
+Revises: dd31920080e4
+Create Date: 2022-10-09 16:55:04.689791
+
+"""
+import sqlalchemy as sa
+
+from alembic import op
+
+# revision identifiers, used by Alembic.
+revision = "9d0907d06b20"
+down_revision = "dd31920080e4"
+branch_labels = None
+depends_on = None
+
+
+def upgrade() -> None:
+    # ### commands auto generated by Alembic - please adjust! ###
+    op.create_table(
+        "group",
+        sa.Column("id", sa.Integer(), autoincrement=True, nullable=False),
+        sa.Column("date_created", sa.DateTime(), nullable=True),
+        sa.Column("date_updated", sa.DateTime(), nullable=True),
+        sa.Column("name", sa.String(), nullable=True),
+        sa.PrimaryKeyConstraint("id"),
+    )
+    op.add_column("product", sa.Column("group_id", sa.Integer(), nullable=True))
+    op.create_foreign_key(None, "product", "group", ["group_id"], ["id"])
+    # ### end Alembic commands ###
+
+
+def downgrade() -> None:
+    # ### commands auto generated by Alembic - please adjust! ###
+    op.drop_constraint(None, "product", type_="foreignkey")
+    op.drop_column("product", "group_id")
+    op.drop_table("group")
+    # ### end Alembic commands ###
