# src/tavern/controllers/products.py
@@ -3,7 +3,7 @@ from datetime import datetime
 from flask import jsonify
 
 from tavern_db.database import db_session
-from tavern_db.models import BtwType, Product, ProductPosition, SalesPrice
+from tavern_db.models import BtwType, Group, Product, ProductPosition, SalesPrice
 from tavern_db.schemas import ProductSchema
 
 
@@ -27,6 +27,7 @@ def create(body):
     name = body.get("name")
     tag = body.get("tag")
     btw_id = body.get("btw_id")
+    group_id = body.get("group_id")
     price = body.get("price")
 
     prod = Product(name=name, tag=tag)
@@ -40,6 +41,11 @@ def create(body):
     pos = ProductPosition(value=0, amount=0)
     prod.product_positions.append(pos)
 
+    group = Group.query.filter(Group.id == group_id).one_or_none()
+    if group is None:
+        return jsonify({"msg": f"Product group with id {group_id} not found"}), 404
+    prod.group = group
+
     db_session.add(prod)
     db_session.commit()
 
@@ -48,15 +54,24 @@ def create(body):
 
 
 def update(product_id, body):
-    name = body.get("name")
-    tag = body.get("tag")
+    name = body.get("name", None)
+    tag = body.get("tag", None)
+    group_id = body.get("group_id", None)
 
     prod = Product.query.filter(Product.id == product_id).one_or_none()
     if prod is None:
         return jsonify({"msg": f"Product with id {product_id} not found"}), 404
 
-    prod.name = name
-    prod.tag = tag
+    if name:
+        prod.name = name
+    if tag:
+        prod.tag = tag
+    if group_id:
+        group = Group.query.filter(Group.id == group_id).one_or_none()
+        if group is None:
+            return jsonify({"msg": f"Product group with id {group_id} not found"}), 404
+        prod.group = group
+
     db_session.commit()
 
     schema = ProductSchema()
